--- a/AdminService/requirements.txt
+++ b/AdminService/requirements.txt
@@ -1,3 +1,5 @@
+aio-pika==9.4.3
+aiormq==6.8.1
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.8.30
@@ -17,6 +19,8 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 motor==3.5.1
+multidict==6.1.0
+pamqp==3.3.0
 pydantic==2.9.1
 pydantic-settings==2.5.2
 pydantic_core==2.23.3
@@ -35,3 +39,4 @@ uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.24.0
 websockets==13.0.1
+yarl==1.11.1
