--- a/FrontendService/requirements.txt
+++ b/FrontendService/requirements.txt
@@ -1,3 +1,5 @@
+aio-pika==9.4.3
+aiormq==6.8.1
 alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
@@ -21,6 +23,8 @@ Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+multidict==6.1.0
+pamqp==3.3.0
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
@@ -31,6 +35,7 @@ PyYAML==6.0.2
 rich==13.8.1
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.35
 starlette==0.38.5
 typer==0.12.5
 typing_extensions==4.12.2
@@ -38,3 +43,4 @@ uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.24.0
 websockets==13.0.1
+yarl==1.11.1
